DAY07: Finish go-server
