# WIP/DAY07/go-server/api/swagger.yaml
@@ -15,9 +15,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/body'
-            example:
-              name: Agumon
+              $ref: '#/components/schemas/DigimonInfoRequest'
         required: true
       responses:
         "200":
@@ -26,9 +24,15 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/DigimonInfo'
+        "500":
+          description: 伺服器錯誤
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /digimons/{digimonID}:
     get:
-      description: 查看數碼蛋狀態
+      summary: 查看數碼獸狀態
       parameters:
       - name: digimonID
         in: path
@@ -45,6 +49,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/DigimonInfo'
+        "500":
+          description: 伺服器錯誤
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /digimons/{digimonID}:foster:
     post:
       summary: 培育數碼獸
@@ -63,7 +73,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/body_1'
+              $ref: '#/components/schemas/FosterRequest'
         required: true
       responses:
         "200":
@@ -72,6 +82,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/DigimonInfo'
+        "500":
+          description: 伺服器錯誤
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 components:
   schemas:
     DigimonInfo:
@@ -93,7 +109,12 @@ components:
         name: Agumon
         id: 56e400bd-c98b-49b9-ad8c-0607800e026f
         status: healthy
-    body:
+    FosterRequest:
+      type: object
+      properties:
+        food:
+          $ref: '#/components/schemas/FosterRequest_food'
+    DigimonInfoRequest:
       required:
       - name
       type: object
@@ -101,7 +122,26 @@ components:
         name:
           type: string
           description: 數碼蛋的名字
-    digimonsdigimonIDfoster_foot:
+      example:
+        name: Agumon
+    Error:
+      required:
+      - code
+      - message
+      type: object
+      properties:
+        message:
+          type: string
+          description: 錯誤訊息
+        code:
+          type: number
+          description: |
+            錯誤代碼:
+             * `3000` - Internal error
+      example:
+        message: Internal error. Parsing failed
+        code: 3000
+    FosterRequest_food:
       type: object
       properties:
         name:
@@ -109,8 +149,10 @@ components:
           description: 食物名稱
           example: apple
       description: 培育所使用的食物
-    body_1:
-      type: object
-      properties:
-        foot:
-          $ref: '#/components/schemas/digimonsdigimonIDfoster_foot'
+  responses:
+    "500InternalError":
+      description: 伺服器錯誤
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
